tip-tools replaced modals for images in backstory, fixed positions of divs to not have not have overflow, fixed js math so 2nd symbol hidden is correctly read.

--- a/styles/deviant.css
+++ b/styles/deviant.css
@@ -1,65 +1,113 @@
 /*boiler plate css
 */
+* {
+box-sizing: border-box;
+}
 
 body {
     background-color: rgba(20,20,20,1);
     color: rgba(220,220,220,8);
-    
+    height: 100vh;
+    width: 100vw;
+    /* overflow: hidden; */
+    /* height: 100vh; */
+
 
 }
 
 h1 {
-    margin: 0;
+    margin-top: 30px;
 }
 
 h3 {
-    margin: 5;
+    margin: 0;
 }
 
 main {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
-    height: 155vh;
     align-content: flex-start;
+    padding: 15px;
+    width: 80vw;
+    /* margin: 50px 0;; */
+}
+
+.left-side {
+    flex:1;
+    max-width: 30vw;
+    min-width: 20px;
+    margin: -50px 5px 50px 5px;
+    padding: 5px;
+    height: 80vh;
+}
+
+.right-side {
+    flex: 2;
+    margin: 15px;
+    max-width: 70vw;
+    min-width: 200px;
+    height: 80vh;
+    /* margin-top: 100px; */
 
 }
 
 #backstory {
+    flex: 1;
     background-color: none;
     display: inline-block;
     flex-flow: row wrap;
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
-    width: 33%;
     overflow: auto; 
     height: 35vh;
-    margin-top: 10px;
-    padding: 0 1%;
+    padding: 100px 30px;
+
+    /* margin-top: 10px; */
+    /* padding: 0 1%; */
 }
 
 p {
     line-height: 1.2em;
 }
 
+.hint--image:after {
+    content: '' !important;
+    height: 100px;
+    width: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+
+}
+
+.custom_class:after {
+    background-image: url("phantomWars.png");
+    height: 40px;
+    width: 100px;
+}
+
 .deviant {
+    flex: 1;
     background-color: none;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    margin: 3%;
-    padding: 5px;
-    height: 50vh;
-    width: 200px;
+    height: 30vh;
+    margin-top: 60px;
+    /* padding: 5px; */
+    /* width: 200px; */
 }
 
 .deviant__img {
-    width: 150px;
+    max-width: 250px;
+    min-width: 100px;
     border: 8px inset rgba(52,82,98,.7);
     border-radius: 100%;
-    margin: 5px ;
-    padding: 5px;
+    /* margin: 5px ; */
+    /* padding: 5px; */
     
 }
 
@@ -67,46 +115,68 @@ p {
     flex: flex-grow;
     text-align: center;
     justify-content: center;
-    margin: 0 auto;
+    font-size: 1.5em;
+    /* margin: 0 auto; */
 }
 
 .deviant__data {
     line-height: .8em;
-    font-size: 1em;
-    margin: 0px;
+    font-size: 1.2em;
+    margin-bottom: 60px;
     border: 0 ;
-    padding: -5px;
+    /* padding: -5px; */
     text-align: center;
+}
+
+#help {
+    display: flex;
+    background-color: green;
+    justify-content: center;
+    align-content: space-around;
+    align-items: flex-start;
+    overflow: hidden;
+    height: 30px;
+    padding: 5px;
+    margin: 0 8%;
+    max-width: 920px;
+
+
 }
 
 .help__missions {
     background-color: yellow;
-    color: black;
-    width: 35%;
+    color: #000000;
+    width: 600px;
     line-height: .8em;
     font-size: 1em;
-    height: 15vh;
-    padding: 5px;
+    /* margin: 0 8%; */
+    /* height: 15vh; */
+    /* padding: 5px; */
+    /* align-self: center; */
+    
 }
 
 .help__transmitter {
     background-color: orange;
     color: black;
-    width: 35%;
+    width: 40%;
     line-height: .8em;
     font-size: 1em;
-    height: 30vh;
-    padding: 5px;
-    margin-left: 5%;
+    height: 40vh;
+    /* margin: 0 8%; */
+    /* padding: 5px; */
+    /* margin-left: 5%; */
+    /* align-self: right; */
 }
 
 .animation {
-    width: 55%;
+    flex: 2.5;
+    width: 60vw;
     height: 70vh;
     background-color: pink;
     margin-top: 3%;
-    margin-right: 20%;
-    margin-left: -10%;
+    /* margin-right: 20%; */
+    /* margin-left: 10%; */
 }
 
 
@@ -120,101 +190,8 @@ p {
 
 
 
-/* Style the Image Used to Trigger the Modal */
-.trigger {
-    /* border-radius: 5px; */
-    cursor: pointer;
-    /* transition: 0.3s; */
-  }
-  
-  /* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: flex; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 0; /* Location of the box */
-    margin-bottom: 0;
-    /* left: 50px; */
-    /* top: 0;  */
-    width: 60px;
-    transition-timing-function: ease-in-out;
-    transition: 400ms;
-
-    /* Full width */
-    /* height: 60px;  Full height */
-    /* overflow: auto; Enable scroll if needed */
-    /* background-color: rgb(0,0,0); /* Fallback color */
-    /* background-color: rgba(0,0,0,0.9); Black w/ opacity */
-}
-  
-  /* Modal Content (Image) */
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 100%;
-    max-width: 70px;
-}
-  
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
-.caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 20px;
-    text-align: center;
-    color: grey;
-    padding: 2px 0;
-    height: 5px;
-}
-  
-  /* Add Animation - Zoom in the Modal */
-/*   .modal-content, #caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
-  }
-  
-  @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
-  } */
-  
-  /* The Close Button */
-  /* .close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-  } */
-  /* 
-  .close:hover,
-  .close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-  } */
-  
-  /* 100% Image Width on Smaller Screens */
-  /* @media only screen and (max-width: 700px){
-    .modal-content {
-      width: 100%;
-    }
-  }
- */
 
 
-
-
-
-
-
-
-
-#dontPlay {
-    display: show;
-}
 
 
 
