--- a/styles/id_transmitter.css
+++ b/styles/id_transmitter.css
@@ -5,23 +5,34 @@
 
 
 
+/* give transmitter dispaly position of absolute-- turn off to change things */
+
 
 
 
 .transmitterBothDisplays {
     background-color:rgb(29, 29, 53);
-    width: 800px;
-    height: 70vh;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
     margin: 20px auto;
+    position: absolute;
+    width: 62vw;
+    height: 70vh;
+    bottom: 11.25vh;
+    right: -100vh;
 }
+
+.transmitterBothDisplays:hover {
+    /* bottom: 20vh */
+    bottom: 11.25vh; /* perfect height with animation box */
+    right: 14.83vh;  /* perfect width w/ animation box */
+    
+}   
 
 .transmitter__user {
     background-color: rgb(179, 164, 32);
-    width: 40%;
     height: 65vh;
     margin: 15px;
     margin-top: 25px;
